--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
   <main>
-    <div>
+    <div class="wrapper">
+      <div>
     <img src="./assets/images/avatar-jessica.jpeg" alt="">
     </br>
     </br>
@@ -44,6 +45,7 @@
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Danielnero-bot</a>.
+    </div>
     </div>
     </div>
   </main>
